# foundry32

./: .gitignore  Cargo.toml  LICENSE  README.md  README.pt-BR.md  build.rs  registry.json
.github/workflows/: ci.yml  release.yml
assets/: app.manifest  generate-icon.ps1  generate-icons.ps1
crates/foundry-common/: Cargo.toml
crates/foundry-common/src/: lang.rs  lib.rs  theme.rs  ui.rs
crates/foundry32/: Cargo.toml  build.rs
crates/foundry32/assets/: app.manifest  app.rc
crates/foundry32/src/: download.rs  engine.rs  gui.rs  i18n.rs  installed.rs  main.rs  model.rs  pathenv.rs  paths.rs  registry.rs  settings.rs  single_instance.rs  update_check.rs
crates/foundry32/src/gui/: mod.rs  preferences_dialog.rs
crates/mcp-console/: Cargo.toml  build.rs
crates/mcp-console/assets/: app.manifest  app.rc
crates/mcp-console/src/: i18n.rs  main.rs  mutation.rs  settings.rs
crates/mcp-console/src/discovery/: claude_json.rs  cli.rs  mod.rs
crates/mcp-console/src/gui/: manual_dialog.rs  mod.rs
crates/witn/: Cargo.toml  build.rs
crates/witn/assets/: app.manifest  app.rc
crates/witn/src/: appname.rs  lib.rs  model.rs  peb.rs  ports.rs  procscan.rs  proctree.rs  tree.rs
docs/: code-signing.md
installer/: setup.iss
src/: i18n.rs  main.rs  model.rs  mutation.rs  settings.rs  update_check.rs  winproc.rs
src/discovery/: cli.rs  mcp_json.rs
src/gui/: add_dialog.rs  mod.rs  preferences_dialog.rs
