[workspace]
resolver = "2"
members = ["crates/foundry-common", "crates/foundry32", "crates/mcp-console"]

# Common metadata inherited by member crates via `field.workspace = true`.
# NOTE: `version` is intentionally NOT here — each crate carries its own
# version (the hub and each tool release on independent version lines).
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/atlas-jedi/foundry32"

# Size-optimized release profile. Workspace-level profiles apply to every
# member; per-crate `[profile.*]` sections are ignored, so this must live here.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
