[package]
name = "foundry-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared Win32 helpers for the Foundry32 workspace: hidden process capture, classic control theming, list-view/menu shims and UI-language detection."

[dependencies]
native-windows-gui = { version = "1.0.13", features = ["list-view", "menu", "high-dpi"] }
winapi = { version = "0.3.9", features = ["winnls", "winuser", "commctrl", "uxtheme", "wingdi"] }
