# Foundry32 — the tool hub/launcher. Versioned independently from the tools it
# installs; the repo tag `v*` tracks this crate's version.
[package]
name = "foundry32"
version = "2.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Foundry32 — a Windows Classic-styled hub to install, run and uninstall developer tools, with modern HTTPS downloads and SHA-256 verification."

[dependencies]
foundry-common = { path = "../foundry-common" }
native-windows-gui = { version = "1.0.13", features = [
    "list-view", "textbox", "frame", "combobox", "listbox", "notice",
    "status-bar", "progress-bar", "tooltip", "message-window", "cursor",
    "menu", "embed-resource", "high-dpi",
] }
winapi = { version = "0.3.9", features = [
    "winuser", "commctrl", "uxtheme", "wingdi",
    "synchapi", "handleapi", "errhandlingapi", "winerror",
] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
minreq = { version = "2", features = ["https-native"] }
# Raw (unexpanded) reads/writes of HKCU\Environment for PATH exposure.
winreg = "0.52"

[build-dependencies]
embed-resource = "2"
