# MCP Console — the first tool in the Foundry32 hub. Versioned independently
# from the hub; 2.0.0 marks the rename from the MCP Hangar 1.x line.
[package]
name = "mcp-console"
version = "2.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Windows GUI to inspect and manage Claude Code MCP servers, with clear account-level vs local scope identification"

[dependencies]
foundry-common = { path = "../foundry-common" }
native-windows-gui = { version = "1.0.13", features = [
    "list-view", "listbox", "combobox", "textbox", "rich-textbox", "notice",
    "status-bar", "tooltip", "message-window", "cursor", "menu", "embed-resource",
    "high-dpi",
] }
winapi = { version = "0.3.9", features = ["winnls", "winuser", "commctrl", "uxtheme", "wingdi"] }
serde_json = { version = "1", features = ["preserve_order"] }
minreq = { version = "2", features = ["https-native"] }

[build-dependencies]
embed-resource = "2"
